<resources>
    <string name="app_name">Navigation Drawer</string>
    <string name="my_image">my image</string>
    <string name="john_doe">John Doe</string>
    <string name="example_gmail_com">example@gmail.com</string>
    <string name="Inbox">Inbox</string>
    <string name="starred">Starred</string>
    <string name="sent_mail">Sent mail</string>
    <string name="drafts">Drafts</string>
    <string name="subheader">Subheader</string>
    <string name="all_email">All email</string>
    <string name="trash">Trash</string>
    <string name="spam">Spam</string>
    <string name="open_drawer">Open navigation drawer</string>
    <string name="close_drawer">Close navigation drawer</string>
</resources>
